--- a/graph.css
+++ b/graph.css
@@ -2,6 +2,7 @@
 
 body{
 	margin:0;
+	overflow:hidden;
 }
 
 .leftLabels{
@@ -40,16 +41,15 @@ body{
 	border-left:2px solid black;
 	border-bottom:2px solid black;
 	margin-left:-2px;
-	marign-bottom:-2px;
+	margin-bottom:-2px;
 }
 
 .line{
-	
 	fill:none;
 	stroke:black;
 	stroke-linecap: round;
 	stroke-linejoin: round;
-	stroke-width:2;
+	stroke-width:1;
 	transition: all 0.2s;
 	z-index:2;
 	filter:drop-shadow(0px 0px 10px rgba(0,0,0,.5));
@@ -61,19 +61,6 @@ body{
 	stroke:black;
 	stroke-linecap: round;
 	filter:"drop-shadow";
-}
-
-.horizontalMarkerContainer{
-	display:flex;
-	justify-content: space-around;
-}
-
-.horizontalMarker{
-	//display:inline-flex;
-}
-
-.map{
-	font-size:1.2em;
 }
 
 
