--- a/coloration.css
+++ b/coloration.css
@@ -15,17 +15,10 @@
 	font-family: LiberationSans-BoldItalic;
 	src: url('fonts/LiberationSans-BoldItalic.ttf');
 }
-#targTempTitle{
-	font-size:2em;
-	text-align: right;
-	padding-right:3em;
-	padding-top:.2em;
-	padding-bottom:.2em;
-	color: #0D401B;
-	font-family: LiberationSans-Bold;
-}
+
  body{
 	font-family: LiberationSans-Regular;
+	padding-top:3.5em;
  }
 .active a{
 	background-color:#1B7F36 !important;
@@ -33,8 +26,11 @@
 	font-family:LiberationSans-Bold;
  }
 .containerColor{
-	
 	background-color:#C0FFCF;
+}
+.container
+{
+    min-width: 340px !important;
 }
 .navbar-default .navbar-brand {
 	font-family: LiberationSans-Bold;
