--- a/graph.css
+++ b/graph.css
@@ -1,9 +1,16 @@
 @CHARSET "utf-8";
 
+@font-face{
+	font-family: LiberationSans-Bold;
+	src: url('fonts/LiberationSans-Bold.ttf');
+}
+
 body{
+	font-family: LiberationSans-Bold;
 	margin:0;
 	background-color:#FFF;
 	overflow:hidden;
+	
 }
 
 .leftLabels{
@@ -23,7 +30,7 @@ body{
 	width:40vw;
 	margin-bottom:-20vw;
 	text-align: center;
-	font-size:1.2em;
+	font-size:1em;
 	
 	-ms-transform: rotate(-90deg); /* IE 9 */
   -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
