--- a/analysis.css
+++ b/analysis.css
@@ -2,12 +2,12 @@
 
 
 @font-face{
-	font-family: LiberationSans-Bold;
-	src: url('fonts/LiberationSans-Bold.ttf');
+	font-family: LiberationSans-Regular;
+	src: url('fonts/LiberationSans-Regular.ttf');
 }
 
 body{
-	font-family: LiberationSans-Bold;
+	font-family: LiberationSans-Regular;
 }
 
 .title{
