--- a/homeLayout.css
+++ b/homeLayout.css
@@ -54,7 +54,6 @@ label{
 }
 .buttonSizing{
 	width:33.3% !important;
-	
 	color:#0D401B;
 }
 .btn-group{
@@ -70,26 +69,73 @@ label{
 	height:auto;
 	background-color: blue;
 }
-
-@media(max-width:767px){
+span.glyphicon {
+    font-size: 2em;
+}
+@media(max-width:479px){
 	#thermostatGraphic{
-	width:auto;
-	height:20em;
-	margin-left:13%;
+	width:3.5em;
+	height:auto;
+	margin-left:0em;
 	margin-right:0em;
+	margin-top:4.5em;
 	}
 	#targTempTitle{
-		font-size: 1.5em;
+		font-size: 1.2em;
 	}
 	#controlPanel{
-		margin-right:1em;
+		min-width:17em;
 		padding:.5em;
-		min-width:20em;
 	}
 	#tempChangeSection{
 		padding:1em;
 		margin-left:.5em;
-		margin-right:1em;
+		margin-right:.5em;
+		margin-bottom:2em;
+	}
+	#schedText{
+		font-size: 1em;
+	}
+	#settingsButtons{
+		font-size:2em;
+	}
+	label{
+		font-size:.7em !important;
+	}
+	#tempTextC{
+		font-size:2.5em;
+		padding-left:.1em;
+	}
+	#tempTextF{
+		font-size:1.75em;
+		padding-left:.1em;
+	}
+	#thermostatSection{
+		margin-left:.5em;
+		margin-right:.5em;
+	}
+	.select.select-block .btn {
+    width: 1em !important;
+	}
+}
+@media(min-width:480px){
+	#thermostatGraphic{
+	width:5em;
+	height:auto;
+	margin-left:10%;
+	margin-right:0em;
+	}
+	#targTempTitle{
+		font-size: 1.7em;
+	}
+	#controlPanel{
+		padding:.5em;
+		min-width:22em;
+	}
+	#tempChangeSection{
+		padding:1em;
+		margin-left:.5em;
+		margin-right:.5em;
 		margin-bottom:2em;
 	}
 	#schedText{
@@ -100,6 +146,18 @@ label{
 	}
 	label{
 		font-size:.75em !important;
+	}
+	#tempTextC{
+		font-size:2.5em;
+		padding-left:.1em;
+	}
+	#tempTextF{
+		font-size:1.75em;
+		padding-left:.1em;
+	}
+	#thermostatSection{
+		margin-left:.5em;
+		margin-right:.5em;
 	}
 }
 @media(min-width:768px){
@@ -113,8 +171,7 @@ label{
 	}
 	#controlPanel{
 		padding: 1em;
-		min-width:28em;
-		margin-right:0em;
+		min-width:30em;
 	}
 	#tempChangeSection{
 		padding:1em;
@@ -129,6 +186,14 @@ label{
 	#settingsButtons{
 		font-size:2em;
 	}
+	#tempTextC{
+		font-size:3em;
+		padding-left:.1em;
+	}
+	#tempTextF{
+		font-size:2em;
+		padding-left:.1em;
+	}
 	label{
 		font-size:.5em !important;
 	}
@@ -142,9 +207,7 @@ label{
 		font-size: 2.6em;
 	}
 	#controlPanel{
-		
 		min-width:100%;
-		margin-right:1em;
 	}
 	
 }
