--- a/homeLayout.css
+++ b/homeLayout.css
@@ -1,11 +1,12 @@
 label{
 	vertical-align:center;
 }
+h3{
+	padding-bottom:.5em;
+}
 #targTempTitle{
 	text-align: right;
 	padding-right:1em;
-	padding-top:.2em;
-	padding-bottom:.2em;
 	color: #0D401B;
 	font-family: LiberationSans-Bold;
 }
@@ -20,7 +21,7 @@ label{
 	width:auto;
 }
 #controlSection{
-	float:right;
+	width:100%;
 }
 #thermostatChoice{
 	width:100% !important;
@@ -40,6 +41,9 @@ label{
 #holdButton{
 	width:100%;
 	color:#0D401B;
+}
+#thermostatSection{
+	float:right;
 }
 .schedText{
 	text-align: center;
@@ -74,11 +78,10 @@ span.glyphicon {
 }
 @media(max-width:479px){
 	#thermostatGraphic{
-	width:3.5em;
+	width:4.5em;
 	height:auto;
 	margin-left:0em;
 	margin-right:0em;
-	margin-top:4.5em;
 	}
 	#targTempTitle{
 		font-size: 1.2em;
@@ -89,6 +92,7 @@ span.glyphicon {
 	}
 	#tempChangeSection{
 		padding:1em;
+		margin-top:20px;
 		margin-left:.5em;
 		margin-right:.5em;
 		margin-bottom:2em;
@@ -122,8 +126,8 @@ span.glyphicon {
 	#thermostatGraphic{
 	width:5em;
 	height:auto;
-	margin-left:10%;
 	margin-right:0em;
+	margin-bottom:20px;
 	}
 	#targTempTitle{
 		font-size: 1.7em;
@@ -134,6 +138,7 @@ span.glyphicon {
 	}
 	#tempChangeSection{
 		padding:1em;
+		margin-top:20px;
 		margin-left:.5em;
 		margin-right:.5em;
 		margin-bottom:2em;
@@ -162,9 +167,9 @@ span.glyphicon {
 }
 @media(min-width:768px){
 #thermostatGraphic{
-	margin-left:16%;
 	width:auto;
 	height:22em;
+	
 	}
 	#targTempTitle{
 		font-size: 2em;
@@ -175,10 +180,8 @@ span.glyphicon {
 	}
 	#tempChangeSection{
 		padding:1em;
-		padding-top:2em;
-		padding-bottom:2em;
-		margin-left:0em;
-		margin-right:0em;
+		margin-left:.5em;
+		margin-right:.5em;
 	}
 	#schedText{
 		font-size: 1.5em;
@@ -207,12 +210,13 @@ span.glyphicon {
 		font-size: 2.6em;
 	}
 	#controlPanel{
-		min-width:100%;
+		min-width:35em;
 	}
 	
 }
 @media(min-width:1200px){
-		#thermostatGraphic{
-	margin-left:25%;
-		}
+	#thermostatGraphic{
+		margin-left:25%;
+	}
+	
 }
